--- a/themes/style/topdesk.css
+++ b/themes/style/topdesk.css
@@ -147,20 +147,12 @@ h5 {
 }
 
 a {
-  display: inline-block;
   font-weight: 600;
   color: var(--denim-500);
-
-  transition-property: transform;
-  transition-duration: 0.1s;
-  transition-timing-function: ease-out;
 }
 
 a:hover {
-  transform: translateY(-0.3rem);
-
-  transition-duration: 0.4s;
-  transition-timing-function: ease;
+  text-decoration: underline wavy;
 }
 
 a:active {
